--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "autocommit": "chokidar \"**/*\" --ignored=\"**/.git/**\" -c \"./autocommit.bat\""
+    "lint": "next lint"
   },
   "dependencies": {
     "next": "15.4.5",
